--- a/SoftComputing/SoftComputing.vcxproj
+++ b/SoftComputing/SoftComputing.vcxproj
@@ -160,6 +160,9 @@
     <ClInclude Include="Tag.h" />
     <ClInclude Include="Traininsgdaten.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
